--- a/notebooks/PoissonBayesian.ipynb
+++ b/notebooks/PoissonBayesian.ipynb
@@ -232,7 +232,7 @@
       "import dolfin as dl\n",
       "import sys\n",
       "sys.path.append( \"../\" )\n",
-      "from pylib import *\n",
+      "from hippylib import *\n",
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
