--- a/notebooks/AdvectionDiffusionBayesian.ipynb
+++ b/notebooks/AdvectionDiffusionBayesian.ipynb
@@ -112,10 +112,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from dolfin import *\n",
+      "import dolfin as dl\n",
       "import sys\n",
       "sys.path.append( \"../\" )\n",
-      "from pylib import *\n",
+      "from hippylib import *\n",
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
@@ -126,7 +126,7 @@
       "import logging\n",
       "logging.getLogger('FFC').setLevel(logging.WARNING)\n",
       "logging.getLogger('UFL').setLevel(logging.WARNING)\n",
-      "set_log_active(False)"
+      "dl.set_log_active(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -147,36 +147,36 @@
       "    return on_boundary\n",
       "\n",
       "def q_boundary(x,on_boundary):\n",
-      "    return x[0] < DOLFIN_EPS and x[1] < DOLFIN_EPS\n",
+      "    return x[0] < dl.DOLFIN_EPS and x[1] < dl.DOLFIN_EPS\n",
       "        \n",
       "def computeVelocityField(mesh):\n",
-      "    Xh = VectorFunctionSpace(mesh,'Lagrange', 2)\n",
-      "    Wh = FunctionSpace(mesh, 'Lagrange', 1)\n",
-      "    XW = MixedFunctionSpace([Xh, Wh])\n",
+      "    Xh = dl.VectorFunctionSpace(mesh,'Lagrange', 2)\n",
+      "    Wh = dl.FunctionSpace(mesh, 'Lagrange', 1)\n",
+      "    XW = dl.MixedFunctionSpace([Xh, Wh])\n",
       "\n",
       "    Re = 1e2\n",
       "    \n",
-      "    g = Expression(('0.0','(x[0] < 1e-14) - (x[0] > 1 - 1e-14)'))\n",
-      "    bc1 = DirichletBC(XW.sub(0), g, v_boundary)\n",
-      "    bc2 = DirichletBC(XW.sub(1), Constant(0), q_boundary, 'pointwise')\n",
+      "    g = dl.Expression(('0.0','(x[0] < 1e-14) - (x[0] > 1 - 1e-14)'))\n",
+      "    bc1 = dl.DirichletBC(XW.sub(0), g, v_boundary)\n",
+      "    bc2 = dl.DirichletBC(XW.sub(1), dl.Constant(0), q_boundary, 'pointwise')\n",
       "    bcs = [bc1, bc2]\n",
       "    \n",
-      "    vq = Function(XW)\n",
-      "    (v,q) = split(vq)\n",
-      "    (v_test, q_test) = TestFunctions (XW)\n",
+      "    vq = dl.Function(XW)\n",
+      "    (v,q) = dl.split(vq)\n",
+      "    (v_test, q_test) = dl.TestFunctions (XW)\n",
       "    \n",
       "    def strain(v):\n",
-      "        return sym(nabla_grad(v))\n",
+      "        return dl.sym(dl.nabla_grad(v))\n",
       "    \n",
-      "    F = ( (2./Re)*inner(strain(v),strain(v_test))+ inner (nabla_grad(v)*v, v_test)\n",
-      "           - (q * div(v_test)) + ( div(v) * q_test) ) * dx\n",
+      "    F = ( (2./Re)*dl.inner(strain(v),strain(v_test))+ dl.inner (dl.nabla_grad(v)*v, v_test)\n",
+      "           - (q * dl.div(v_test)) + ( dl.div(v) * q_test) ) * dl.dx\n",
       "           \n",
-      "    solve(F == 0, vq, bcs, solver_parameters={\"newton_solver\":\n",
+      "    dl.solve(F == 0, vq, bcs, solver_parameters={\"newton_solver\":\n",
       "                                         {\"relative_tolerance\":1e-4, \"maximum_iterations\":100}})\n",
       "    \n",
       "    plt.figure(figsize=(15,5))\n",
-      "    vh = project(v,Xh)\n",
-      "    qh = project(q,Wh)\n",
+      "    vh = dl.project(v,Xh)\n",
+      "    qh = dl.project(q,Wh)\n",
       "    nb.plot(nb.coarsen_v(vh), subplot_loc=121,mytitle=\"Velocity\")\n",
       "    nb.plot(qh, subplot_loc=122,mytitle=\"Pressure\")\n",
       "    plt.show()\n",
@@ -198,9 +198,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mesh = refine( Mesh(\"ad_20.xml\") )\n",
+      "mesh = dl.refine( dl.Mesh(\"ad_20.xml\") )\n",
       "wind_velocity = computeVelocityField(mesh)\n",
-      "Vh = FunctionSpace(mesh, \"Lagrange\", 1)\n",
+      "Vh = dl.FunctionSpace(mesh, \"Lagrange\", 1)\n",
       "print \"Number of dofs: {0}\".format( Vh.dim() )"
      ],
      "language": "python",
@@ -226,12 +226,12 @@
       "delta = 2\n",
       "prior = BiLaplacianPrior(Vh, gamma, delta)\n",
       "\n",
-      "prior.mean = interpolate(Expression('min(0.6,exp(-50*(pow(x[0]-0.34,2) +  pow(x[1]-0.71,2))))'), Vh).vector()\n",
-      "true_initial_condition = interpolate(Expression('min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))))'), Vh).vector()\n",
+      "prior.mean = dl.interpolate(dl.Expression('min(0.6,exp(-50*(pow(x[0]-0.34,2) +  pow(x[1]-0.71,2))))'), Vh).vector()\n",
+      "true_initial_condition = dl.interpolate(dl.Expression('min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))))'), Vh).vector()\n",
       "problem = TimeDependentAD(mesh, [Vh,Vh,Vh], 0., 4., 1., .2, wind_velocity, true_initial_condition, True, prior)\n",
       "\n",
-      "objs = [Function(Vh,true_initial_condition),\n",
-      "        Function(Vh,prior.mean)]\n",
+      "objs = [dl.Function(Vh,true_initial_condition),\n",
+      "        dl.Function(Vh,prior.mean)]\n",
       "mytitles = [\"True Initial Condition\", \"Prior mean\"]\n",
       "nb.multi1_plot(objs, mytitles)\n",
       "plt.show()"
@@ -341,7 +341,7 @@
       "posterior.mean = a\n",
       "\n",
       "plt.figure(figsize=(7.5,5))\n",
-      "nb.plot(Function(Vh, a), mytitle=\"Initial Condition\")\n",
+      "nb.plot(dl.Function(Vh, a), mytitle=\"Initial Condition\")\n",
       "plt.show()\n",
       "\n",
       "nb.show_solution(Vh, a, u, \"Solution\")"
@@ -367,8 +367,8 @@
       "    print \"Posterior trace {0:5g}; Prior trace {1:5g}; Correction trace {2:5g}\".format(post_tr, prior_tr, corr_tr)\n",
       "post_pw_variance, pr_pw_variance, corr_pw_variance = posterior.pointwise_variance(\"Exact\")\n",
       "\n",
-      "objs = [Function(Vh, pr_pw_variance),\n",
-      "        Function(Vh, post_pw_variance)]\n",
+      "objs = [dl.Function(Vh, pr_pw_variance),\n",
+      "        dl.Function(Vh, post_pw_variance)]\n",
       "mytitles = [\"Prior Variance\", \"Posterior Variance\"]\n",
       "nb.multi1_plot(objs, mytitles, logscale=True)\n",
       "plt.show()"
@@ -389,11 +389,11 @@
      "collapsed": false,
      "input": [
       "nsamples = 5\n",
-      "noise = Vector()\n",
+      "noise = dl.Vector()\n",
       "posterior.init_vector(noise,\"noise\")\n",
       "noise_size = noise.array().shape[0]\n",
-      "s_prior = Function(Vh, name=\"sample_prior\")\n",
-      "s_post = Function(Vh, name=\"sample_post\")\n",
+      "s_prior = dl.Function(Vh, name=\"sample_prior\")\n",
+      "s_post = dl.Function(Vh, name=\"sample_post\")\n",
       "\n",
       "pr_max =  2.5*math.sqrt( pr_pw_variance.max() ) + prior.mean.max()\n",
       "pr_min = -2.5*math.sqrt( pr_pw_variance.min() ) + prior.mean.min()\n",
