When possible use ML as AMG preconditioner. If ML is not available use PETSc (slower)

--- a/notebooks/PoissonDeterministic.ipynb
+++ b/notebooks/PoissonDeterministic.ipynb
@@ -319,10 +319,11 @@
       "    # Hessian performed on x, output as generic vector y\n",
       "    def mult(self, x, y):\n",
       "        self.cgiter += 1\n",
+      "        y.zero()\n",
       "        if iter <= 500:\n",
-      "            y.set_local(Hess_GN (x, self.R, self.C, self.A, self.W).array() )\n",
+      "            y.axpy(1., Hess_GN (x, self.R, self.C, self.A, self.W) )\n",
       "        else:\n",
-      "            y.set_local(Hess_Newton (x, self.R, self.Raa, self.C, self.A, self.W, self.Wua).array() )"
+      "            y.axpy(1., Hess_Newton (x, self.R, self.Raa, self.C, self.A, self.W, self.Wua) )"
      ],
      "language": "python",
      "metadata": {},
