Rename control --> parameter

--- a/notebooks/AdvectionDiffusionBayesian.ipynb
+++ b/notebooks/AdvectionDiffusionBayesian.ipynb
@@ -272,8 +272,8 @@
       "[u,a,p] = problem.generate_vector()\n",
       "problem.solveFwd(u, [u,a,p], 1e-12)\n",
       "problem.solveAdj(p, [u,a,p], 1e-12)\n",
-      "mg = problem.generate_vector(CONTROL)\n",
-      "grad_norm = problem.evalGradientControl([u,a,p], mg)\n",
+      "mg = problem.generate_vector(PARAMETER)\n",
+      "grad_norm = problem.evalGradientParameter([u,a,p], mg)\n",
       "        \n",
       "print \"(g,g) = \", grad_norm\n",
       "    \n",
