--- a/notebooks/PoissonBayesian.ipynb
+++ b/notebooks/PoissonBayesian.ipynb
@@ -273,7 +273,7 @@
       "Vh2 = dl.FunctionSpace(mesh, 'Lagrange', 2)\n",
       "Vh1 = dl.FunctionSpace(mesh, 'Lagrange', 1)\n",
       "Vh = [Vh2, Vh1, Vh2]\n",
-      "print \"Number of dofs: STATE={0}, CONTROL={1}, ADJOINT={2}\".format(Vh[STATE].dim(), Vh[CONTROL].dim(), Vh[ADJOINT].dim())"
+      "print \"Number of dofs: STATE={0}, PARAMETER={1}, ADJOINT={2}\".format(Vh[STATE].dim(), Vh[PARAMETER].dim(), Vh[ADJOINT].dim())"
      ],
      "language": "python",
      "metadata": {},
@@ -299,17 +299,17 @@
       "\n",
       "gamma = 2\n",
       "delta = 5\n",
-      "prior = BiLaplacianPrior(Vh[CONTROL], gamma, delta)\n",
+      "prior = BiLaplacianPrior(Vh[PARAMETER], gamma, delta)\n",
       "    \n",
       "print \"Prior regularization: (delta - gamma*Laplacian)^2: delta={0}, gamma={1}\".format(delta, gamma)    \n",
       "    \n",
       "atrue_expression = dl.Expression('log(2+7*(pow(pow(x[0] - 0.5,2) + pow(x[1] - 0.5,2),0.5) > 0.2)) - log(10)')\n",
       "prior_mean_expression = dl.Expression('log(9) - log(10)')\n",
       "    \n",
-      "atrue = dl.interpolate(atrue_expression, Vh[CONTROL]).vector()\n",
-      "prior.mean = dl.interpolate(prior_mean_expression, Vh[CONTROL]).vector()\n",
+      "atrue = dl.interpolate(atrue_expression, Vh[PARAMETER]).vector()\n",
+      "prior.mean = dl.interpolate(prior_mean_expression, Vh[PARAMETER]).vector()\n",
       "\n",
-      "objs = [dl.Function(Vh[CONTROL],atrue), dl.Function(Vh[CONTROL],prior.mean)]\n",
+      "objs = [dl.Function(Vh[PARAMETER],atrue), dl.Function(Vh[PARAMETER],prior.mean)]\n",
       "mytitles = [\"True Parameter\", \"Prior mean\"]\n",
       "nb.multi1_plot(objs, mytitles)\n",
       "plt.show()\n",
@@ -345,7 +345,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a0 = dl.interpolate(dl.Expression(\"sin(x[0])\"), Vh[CONTROL])\n",
+      "a0 = dl.interpolate(dl.Expression(\"sin(x[0])\"), Vh[PARAMETER])\n",
       "modelVerify(model, a0.vector(), 1e-4, 1e-6)"
      ],
      "language": "python",
@@ -387,7 +387,7 @@
       "\n",
       "plt.figure(figsize=(15,5))\n",
       "nb.plot(dl.Function(Vh[STATE], x[STATE]), subplot_loc=121,mytitle=\"State\")\n",
-      "nb.plot(dl.Function(Vh[CONTROL], x[CONTROL]), subplot_loc=122,mytitle=\"Parameter\")\n",
+      "nb.plot(dl.Function(Vh[PARAMETER], x[PARAMETER]), subplot_loc=122,mytitle=\"Parameter\")\n",
       "plt.show()"
      ],
      "language": "python",
@@ -418,12 +418,12 @@
       "k = 20\n",
       "p = 10\n",
       "print \"Single/Double Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k,p)\n",
-      "Omega = np.random.randn(x[CONTROL].array().shape[0], k+p)\n",
+      "Omega = np.random.randn(x[PARAMETER].array().shape[0], k+p)\n",
       "#d, U = singlePassG(Hmisfit, prior.R, prior.Rsolver, Omega, k)\n",
       "d, U = doublePassG(Hmisfit, prior.R, prior.Rsolver, Omega, k)\n",
       "\n",
       "posterior = GaussianLRPosterior(prior, d, U)\n",
-      "posterior.mean = x[CONTROL]\n",
+      "posterior.mean = x[PARAMETER]\n",
       "\n",
       "#d2, U2 = singlePass(Hmisfit, Omega, k)\n",
       "\n",
@@ -432,7 +432,7 @@
       "plt.xlabel('number')\n",
       "plt.ylabel('eigenvalue')\n",
       "\n",
-      "nb.plot_eigenvectors(Vh[CONTROL], U, mytitle=\"Eigenvector\", which=[0,1,2,5,10,15])"
+      "nb.plot_eigenvectors(Vh[PARAMETER], U, mytitle=\"Eigenvector\", which=[0,1,2,5,10,15])"
      ],
      "language": "python",
      "metadata": {},
@@ -455,8 +455,8 @@
       "    print \"Posterior trace {0:5e}; Prior trace {1:5e}; Correction trace {2:5e}\".format(post_tr, prior_tr, corr_tr)\n",
       "post_pw_variance, pr_pw_variance, corr_pw_variance = posterior.pointwise_variance(\"Exact\")\n",
       "\n",
-      "objs = [dl.Function(Vh[CONTROL], pr_pw_variance),\n",
-      "        dl.Function(Vh[CONTROL], post_pw_variance)]\n",
+      "objs = [dl.Function(Vh[PARAMETER], pr_pw_variance),\n",
+      "        dl.Function(Vh[PARAMETER], post_pw_variance)]\n",
       "mytitles = [\"Prior variance\", \"Posterior variance\"]\n",
       "nb.multi1_plot(objs, mytitles, logscale=True)\n",
       "plt.show()"
@@ -480,8 +480,8 @@
       "noise = dl.Vector()\n",
       "posterior.init_vector(noise,\"noise\")\n",
       "noise_size = noise.array().shape[0]\n",
-      "s_prior = dl.Function(Vh[CONTROL], name=\"sample_prior\")\n",
-      "s_post = dl.Function(Vh[CONTROL], name=\"sample_post\")\n",
+      "s_prior = dl.Function(Vh[PARAMETER], name=\"sample_prior\")\n",
+      "s_post = dl.Function(Vh[PARAMETER], name=\"sample_post\")\n",
       "\n",
       "range_pr = 2*math.sqrt( pr_pw_variance.max() )\n",
       "ps_max   = 2*math.sqrt( post_pw_variance.max() ) + posterior.mean.max()\n",
