--- a/notebooks/AdvectionDiffusionBayesian.ipynb
+++ b/notebooks/AdvectionDiffusionBayesian.ipynb
@@ -119,14 +119,17 @@
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
-      "from AdvectionDiffusionModel import TimeDependentAD\n",
+      "sys.path.append( \"../applications/ad_diff/\" )\n",
+      "from model_gls import TimeDependentAD\n",
       "\n",
       "import nb\n",
       "\n",
       "import logging\n",
       "logging.getLogger('FFC').setLevel(logging.WARNING)\n",
       "logging.getLogger('UFL').setLevel(logging.WARNING)\n",
-      "dl.set_log_active(False)"
+      "dl.set_log_active(False)\n",
+      "\n",
+      "np.random.seed(1)"
      ],
      "language": "python",
      "metadata": {},
@@ -222,19 +225,46 @@
       "#delta = 10\n",
       "#prior = LaplacianPrior(Vh, gamma, delta)\n",
       "\n",
-      "gamma = 5e-1\n",
-      "delta = 2\n",
+      "gamma = 1\n",
+      "delta = 8\n",
       "prior = BiLaplacianPrior(Vh, gamma, delta)\n",
       "\n",
-      "prior.mean = dl.interpolate(dl.Expression('min(0.6,exp(-50*(pow(x[0]-0.34,2) +  pow(x[1]-0.71,2))))'), Vh).vector()\n",
+      "prior.mean = dl.interpolate(dl.Expression('0.5'), Vh).vector()\n",
       "true_initial_condition = dl.interpolate(dl.Expression('min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))))'), Vh).vector()\n",
-      "problem = TimeDependentAD(mesh, [Vh,Vh,Vh], 0., 4., 1., .2, wind_velocity, true_initial_condition, True, prior)\n",
+      "problem = TimeDependentAD(mesh, [Vh,Vh,Vh], 0., 4., 1., .2, wind_velocity, True, prior)\n",
       "\n",
       "objs = [dl.Function(Vh,true_initial_condition),\n",
       "        dl.Function(Vh,prior.mean)]\n",
       "mytitles = [\"True Initial Condition\", \"Prior mean\"]\n",
       "nb.multi1_plot(objs, mytitles)\n",
       "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Generate the synthetic observations"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rel_noise = 0.001\n",
+      "utrue = problem.generate_vector(STATE)\n",
+      "x = [utrue, true_initial_condition, None]\n",
+      "problem.solveFwd(x[STATE], x, 1e-9)\n",
+      "MAX = utrue.norm(\"linf\", \"linf\")\n",
+      "noise_std_dev = rel_noise * MAX\n",
+      "problem.ud.copy(utrue)\n",
+      "problem.ud.randn_perturb(noise_std_dev)\n",
+      "problem.noise_variance = noise_std_dev*noise_std_dev\n",
+      "\n",
+      "nb.show_solution(Vh, true_initial_condition, utrue, \"Solution\")"
      ],
      "language": "python",
      "metadata": {},
@@ -298,7 +328,7 @@
       "p = 20\n",
       "print \"Single Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k,p)\n",
       "Omega = np.random.randn(a.array().shape[0], k+p)\n",
-      "d, U = singlePassG(H, prior.R, prior.Rsolver, Omega, k, check_Bortho=False, check_Aortho=False, check_residual=False)\n",
+      "d, U = singlePassG(H, prior.R, prior.Rsolver, Omega, k)\n",
       "#d, U = singlePass(H, Omega, k)\n",
       "\n",
       "posterior = GaussianLRPosterior( prior, d, U )\n",
@@ -365,7 +395,7 @@
       "if compute_trace:\n",
       "    post_tr, prior_tr, corr_tr = posterior.trace()\n",
       "    print \"Posterior trace {0:5g}; Prior trace {1:5g}; Correction trace {2:5g}\".format(post_tr, prior_tr, corr_tr)\n",
-      "post_pw_variance, pr_pw_variance, corr_pw_variance = posterior.pointwise_variance(\"Exact\")\n",
+      "post_pw_variance, pr_pw_variance, corr_pw_variance = posterior.pointwise_variance()\n",
       "\n",
       "objs = [dl.Function(Vh, pr_pw_variance),\n",
       "        dl.Function(Vh, post_pw_variance)]\n",
