--- a/notebooks/UnconstrainedMinimization.ipynb
+++ b/notebooks/UnconstrainedMinimization.ipynb
@@ -35,7 +35,7 @@
       "To obtain the weak form of the above necessary condition, we first expand the term $\\Pi(u + \\varepsilon \\hat{u})$ as\n",
       "$$\\Pi(u + \\varepsilon \\hat{u}) = \\frac{1}{2} \\int_\\Omega [k_1 + k_2(u + \\varepsilon\\hat{u})^2](\\nabla u + \\varepsilon \\nabla \\hat{u})\\cdot(\\nabla u + \\varepsilon \\nabla \\hat{u}) dx - \\int_\\Omega f\\,(u+\\varepsilon\\hat{u}) dx.$$\n",
       "\n",
-      "After some semplification, we obtain\n",
+      "After some simplification, we obtain\n",
       "$$\\frac{\\Pi(u + \\varepsilon \\hat{u}) - \\Pi(u)}{\\epsilon} = \\int_\\Omega \\left[k_2 u \\hat{u} \\nabla u \\cdot \\nabla u + (k_1 + k_2u^2)\\nabla \\hat{u}\\cdot \\nabla u\\right] dx - \\int_\\Omega f \\hat{u} dx + \\mathcal{O}(\\epsilon).$$\n",
       "\n",
       "By neglecting the $\\mathcal{O}(\\epsilon)$ terms, we write the weak form of the necessary conditions as\n",
@@ -62,9 +62,11 @@
       "\n",
       "*Given current *$u_k$, *find* $\\tilde{u} \\in H^1_0$ *such that*\n",
       "$$ \\delta_u^2 \\Pi(u_k, \\hat{u}, \\tilde{u}) = -\\delta_u \\Pi(u_k, \\hat{u}) \\quad \\forall \\, \\hat{u} \\in H_0^1.$$\n",
+      "*Update the current solution* $u_{k+1}$ *using the Newton direction* $\\tilde{u}$\n",
+      "$$ u_{k+1} = u_k + \\tilde{u}.$$\n",
       "\n",
       "### Hessian\n",
-      "To derive the weak form of the Hessian, we first expand the term $\\delta_u Pi(u +\\varepsilon \\tilde{u},\\hat{u})$ as\n",
+      "To derive the weak form of the Hessian, we first expand the term $\\delta_u \\Pi(u +\\varepsilon \\tilde{u},\\hat{u})$ as\n",
       "$$\\delta_u \\Pi(u+\\varepsilon\\tilde{u}, \\hat{u}) = \\int_\\Omega \\left[k_2 (u+\\varepsilon\\tilde{u}) \\hat{u} \\nabla (u+\\varepsilon\\tilde{u}) \\cdot \\nabla (u+\\varepsilon\\tilde{u}) + (k_1 + k_2(u+\\varepsilon\\tilde{u})^2)\\nabla \\hat{u}\\cdot \\nabla (u+\\varepsilon\\tilde{u}) \\right] dx - \\int_\\Omega f \\hat{u} dx \\quad \\forall \\hat{u} \\in H_0^1.$$\n",
       "\n",
       "Then, after some simplification, we obtain\n",
@@ -76,10 +78,10 @@
       "$$\\int_\\Omega \\left[k_2\\tilde{u}\\hat{u}\\nabla u \\cdot \\nabla u + 2k_2 u \\hat{u} \\nabla \\tilde{u} \\cdot \\nabla u + 2k_2 u \\tilde{u} \\nabla \\hat{u} \\cdot \\nabla u + (k_1 + k_2u^2) \\nabla \\hat{u} \\cdot \\nabla \\tilde{u} \\right] dx = - \\int_\\Omega \\left[k_2 u \\hat{u} \\nabla u \\cdot \\nabla u + (k_1 + k_2u^2)\\nabla \\hat{u}\\cdot \\nabla u -f \\hat{u} \\right] dx \\quad \\forall \\, \\hat{u} \\in H_0^1. $$\n",
       "The solution is then updated using the Newton direction $\\tilde{u}$\n",
       "$$ u^{\\rm new} = u + \\alpha \\tilde{u}.$$\n",
-      "Here $\\alpha$ denotes a relaxation parameter (line-search).\n",
+      "Here $\\alpha$ denotes a relaxation parameter (back-tracking/line-search) used to achieve global convergence of the Newton method.\n",
       "\n",
       "###Strong form of the Newton step\n",
-      "$$ - \\nabla \\cdot \\left[ (k_1 + k_2 u^2) \\nabla \\tilde{u}\\right] + 2k_2u\\nabla\\tilde{u}\\cdot\\nabla u - \\nabla\\cdot(2k_2 u \\tilde{u} \\nabla u) + k_2 \\tilde{u} \\nabla u \\nabla u = \\nabla \\cdot\\left[(k_1 + k_2 u^2)\\nabla \\right] - k_2 u \\nabla u\\cdot \\nabla u + f \\quad {\\rm in} \\, \\Omega.$$\n",
+      "$$ - \\nabla \\cdot \\left[ (k_1 + k_2 u^2) \\nabla \\tilde{u}\\right] + 2k_2u\\nabla\\tilde{u}\\cdot\\nabla u - \\nabla\\cdot(2k_2 u \\tilde{u} \\nabla u) + k_2 \\tilde{u} \\nabla u \\nabla u = \\nabla \\cdot\\left[(k_1 + k_2 u^2)\\nabla \\right]u - k_2 u \\nabla u\\cdot \\nabla u + f \\quad {\\rm in} \\, \\Omega.$$\n",
       "$$ \\tilde{u} = 0 \\quad {\\rm on} \\, \\partial \\Omega. $$"
      ]
     },
@@ -258,6 +260,7 @@
       "plt.figure()    \n",
       "plt.loglog(eps, err_grad, \"-ob\")\n",
       "plt.loglog(eps, (.5*err_grad[0]/eps[0])*eps, \"-.k\")\n",
+      "plt.title(\"Finite Difference Check of the first variation (gradient)\")\n",
       "plt.xlabel(\"eps\")\n",
       "plt.ylabel(\"Error grad\")\n",
       "plt.legend([\"Error Grad\", \"First Order\"], \"upper left\")\n"
@@ -311,6 +314,7 @@
       "plt.figure()    \n",
       "plt.loglog(eps, err_H, \"-ob\")\n",
       "plt.loglog(eps, (.5*err_H[0]/eps[0])*eps, \"-.k\")\n",
+      "plt.title(\"Finite Difference Check of the second variation (Hessian)\")\n",
       "plt.xlabel(\"eps\")\n",
       "plt.ylabel(\"Error Hessian\")\n",
       "plt.legend([\"Error Hessian\", \"First Order\"], \"upper left\")"
@@ -359,7 +363,7 @@
       "\n",
       "lin_it = 0\n",
       "print \"{0:3} {1:3} {2:15} {3:15} {4:15}\".format(\n",
-      "      \"It\", \"cg_it\", \"Pi\", \"(g,du)\", \"||g||l2\")\n",
+      "      \"It\", \"cg_it\", \"Energy\", \"(g,du)\", \"||g||l2\")\n",
       "\n",
       "for i in range(max_iter):\n",
       "    [Hn, gn] = assemble_system(H, grad, bc)\n",
@@ -387,6 +391,7 @@
       "## The built-in non-linear solver in FEniCS\n",
       "\n",
       "As an alternative, we can resort to the [built-in non-linear solver](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/solving/solve.html) in FEniCS.\n",
+      "\n",
       "To this aim, we use the necessary optimality condition and we cast the minimization problem in a non-linear variational problem.\n",
       "More specifically, we the set first variation $\\delta_u \\Pi(u,\\hat{u})$ of the energy functional to zero.\n",
       "\n",
