Some final edits for FEniCS101

--- a/notebooks/FEniCS101.ipynb
+++ b/notebooks/FEniCS101.ipynb
@@ -129,7 +129,7 @@
      "source": [
       "## 3. Define boundary labels\n",
       "\n",
-      "To partition the boundary of $\\Omega$ in the subdomains $\\Gamma_{\\rm top}$, $\\Gamma_{\\rm bottom}$, $\\Gamma_{\\rm left}$, $\\Gamma_{\\rm right}$ we assign a unique label `boundary_parts` to each of this part."
+      "To partition the boundary of $\\Omega$ in the subdomains $\\Gamma_{\\rm top}$, $\\Gamma_{\\rm bottom}$, $\\Gamma_{\\rm left}$, $\\Gamma_{\\rm right}$ we assign a unique label `boundary_parts` to each of part of $\\partial \\Omega$."
      ]
     },
     {
@@ -176,9 +176,9 @@
       "\n",
       "We first define the coefficients of the PDE using the `Constant` and `Expression` classes. `Constant` is used to define coefficients that do not depend on the space coordinates, `Expression` is used to define coefficients that are a known function of the space coordinates `x[0]` (x-axis direction) and `x[1]` (y-axis direction).\n",
       "\n",
-      "In the finite element method community, Dirichlet boundary conditions are also known as *essential* boundary conditions since they are imposed directly in the definition of the finite element method. In FEniCS, we use the class `DirichletBC` to indicate this type of condition.\n",
+      "In the finite element method community, Dirichlet boundary conditions are also known as *essential* boundary conditions since they are imposed directly in the definition of the finite element space. In FEniCS, we use the class `DirichletBC` to indicate this type of condition.\n",
       "\n",
-      "On the other hand, Newman boundary conditions are also known as *natural* boundary conditions since they are imposed directly in the weak formulation as boundary integrals. In FEniCS, we create a new boundary measure `ds[i]` to integrate over the portion of the boundary marked with label `i`."
+      "On the other hand, Newman boundary conditions are also known as *natural* boundary conditions since they are weakly imposed as boundary integrals in the variational formulation (weak form). In FEniCS, we create a new boundary measure `ds[i]` to integrate over the portion of the boundary marked with label `i`."
      ]
     },
     {
@@ -208,7 +208,7 @@
      "source": [
       "## 5. Define and solve the variational problem\n",
       "\n",
-      "We also define two special types of functions: the `TrialFunction` `u` and the `TestFunction` `v`. This special type of functions are used by `FEniCS` to generate the finite element vectors and matrices which stem from the weak formulation of the PDE.\n",
+      "We also define two special types of functions: the `TrialFunction` `u` and the `TestFunction` `v`. These special types of function are used by `FEniCS` to generate the finite element vectors and matrices which stem from the weak formulation of the PDE.\n",
       "\n",
       "More specifically, by denoting by $\\left[{\\phi_i(x)}\\right]_{i=1}^{{\\rm dim}(V_h)}$ the finite element basis for the space $V_h$, a function $u_h \\in V_h$ can be written as\n",
       "$$ u_h = \\sum_{i=1}^{{\\rm dim}(V_h)} {\\rm u}_i \\phi_i(x), $$\n",
@@ -228,9 +228,9 @@
       "\n",
       "using directly the built-in `solve` method in FEniCS.\n",
       "\n",
-      "**NOTE:** As an alternative one can also assemble the finite element matrix $A$ and the right hand side $b$ that stems from the discretization of $a$ and $L$ and then solve the linear system\n",
-      "$$ A {\\rm u} = {\\rm b}. $$\n",
-      "Here\n",
+      "**NOTE:** As an alternative one can also assemble the finite element matrix $A$ and the right hand side $b$ that stems from the discretization of $a$ and $L$, and then solve the linear system\n",
+      "$$ A {\\rm u} = {\\rm b}, $$\n",
+      "where\n",
       "\n",
       "- ${\\rm u}$ is the vector collecting the coefficient of the finite element expasion of $u_h$,\n",
       "\n",
@@ -266,8 +266,8 @@
      "source": [
       "## 6. Compute the discretization error\n",
       "\n",
-      "For this problem, the exact solution is known. We can therefore compute the following norms of the difference between the finite element solution $u_h$ and the exact solution $u_{\\rm ex}$\n",
-      "\n",
+      "For this problem, the exact solution is known.\n",
+      "We can therefore compute the following norms of the discretization error (i.e. the of the difference between the finite element solution $u_h$ and the exact solution $u_{\\rm ex}$)\n",
       "$$ \\| u_{\\rm ex} - u_h \\|_{L^2{\\Omega}} := \\sqrt{ \\int_{\\Omega} (u_{\\rm ex} - u_h)^2 \\, dx }, $$ \n",
       "and\n",
       "$$ \\| u_{\\rm ex} - u_h \\|_{H^1{\\Omega}} := \\sqrt{ \\int_{\\Omega} (u_{\\rm ex} - u_h)^2 \\, dx + \\int_{\\Omega} |\\nabla u_{\\rm ex} - \\nabla u_h|^2 \\, dx}. $$"
@@ -297,17 +297,18 @@
      "source": [
       "## 7. Convergence of the finite element method\n",
       "\n",
-      "Here we verify numerically a well-known convergence result for the finite element method.\n",
+      "We now verify numerically a well-known convergence result for the finite element method.\n",
       "\n",
       "Let denote with $s$ the polynomial degree of the finite element space, and assume that the solution $u_{\\rm ex}$ is at least in $H^{s+1}(\\Omega)$. Then we have\n",
       "$$ \\| u_{\\rm ex} - u_h \\|_{H^1} \\leq C h^{s}, \\quad \\| u_{\\rm ex} - u_h \\|_{L^2} \\leq C h^{s+1}. $$\n",
       "\n",
-      "In the code below, the function `compute(n, degree)` solves the PDE using `n` elements for each directions and finite element spaces of polinomial order `degree`.\n",
-      "The figure below shows the discretization errors in the $H^1$ and $L^2$ as a function of the mesh size $h$ ($h = \\frac{1}{n}$) for piecewise linear (P1, $s=1$) and piecewise quadratic (P2, $s=2$) finite elements. We observe that numerical results are consistent with the theoretical convergence results. In particular:\n",
+      "In the code below, the function `compute(n, degree)` solves the PDE using a mesh with `n` elements in each direction and finite element spaces of polinomial order `degree`.\n",
+      "\n",
+      "The figure below shows the discretization errors in the $H^1$ and $L^2$ as a function of the mesh size $h$ ($h = \\frac{1}{n}$) for piecewise linear (P1, $s=1$) and piecewise quadratic (P2, $s=2$) finite elements. We observe that numerical results are consistent with the finite element convergence theory. In particular:\n",
       "\n",
       "- for piecewise linear finite element P1 we observe first order convergence in the $H^1$-norm and second order convergence in the $L^2$-norm;\n",
       "\n",
-      "- for piecewise quadratic finite element P2 we observe second order convergence in the $H^1$-norm and third order convergence in the $L^2$-norm;"
+      "- for piecewise quadratic finite element P2 we observe second order convergence in the $H^1$-norm and third order convergence in the $L^2$-norm."
      ]
     },
     {
