Final touches for the UncostrainedMinimization notebook

--- a/notebooks/UnconstrainedMinimization.ipynb
+++ b/notebooks/UnconstrainedMinimization.ipynb
@@ -13,15 +13,15 @@
      "source": [
       "# Example: Nonlinear energy functional minimization\n",
       "\n",
-      "Consider the following energy functional\n",
-      "$$ \\Pi(u) = \\frac{1}{2} \\int_\\Omega k(u) \\nabla u \\cdot \\nabla u dx - \\int_\\Omega f\\,u dx,$$\n",
-      "where\n",
-      "$$k(u) = k_1 + k_2 u^2. $$\n",
-      "\n",
-      "In this example we solve the following nonlinear minimization problem.\n",
+      "In this example we solve the following nonlinear minimization problem\n",
       "\n",
       "*Find * $u^* \\in H^1_0(\\Omega)$ *such that*\n",
       "$$ u^* = \\rm{arg}\\min_{u \\in H^1_0(\\Omega)} \\Pi(u). $$\n",
+      "\n",
+      "Here the energy functional $Pi(u)$ has the form\n",
+      "$$ \\Pi(u) = \\frac{1}{2} \\int_\\Omega k(u) \\nabla u \\cdot \\nabla u dx - \\int_\\Omega f\\,u dx,$$\n",
+      "where\n",
+      "$$k(u) = k_1 + k_2 u^2. $$\n",
       "\n",
       "##Necessary condition (Euler-Lagrange condition)\n",
       "\n",
@@ -44,7 +44,7 @@
       "$$ \\int_\\Omega \\left[k_2 u \\hat{u} \\nabla u \\cdot \\nabla u + (k_1 + k_2u^2)\\nabla \\hat{u}\\cdot \\nabla u\\right] dx = \\int_\\Omega f \\hat{u} dx \\quad \\forall \\hat{u} \\in H_0^1.$$\n",
       "\n",
       "###Strong form:\n",
-      "To obtain the strong form, we invoke Green's first idenity and write\n",
+      "To obtain the strong form, we invoke Green's first identity and write\n",
       "$$ \\int_\\Omega \\left[k_2 u \\nabla u \\cdot \\nabla u -  \\nabla \\cdot [(k_1 + k_2u^2) \\nabla u] \\right] \\hat{u} dx + \\int_{\\partial \\Omega} [(k_1 + k_2u^2) \\nabla u]\\cdot n \\hat{u} ds = \\int_\\Omega f \\hat{u} dx \\quad \\forall \\hat{u} \\in H_0^1.$$\n",
       "\n",
       "Since $\\hat{u}$ is arbitrary in $\\Omega$ and $\\hat{u} = 0$ on $\\partial \\Omega$, the strong form of the non-linear boundary problem reads\n",
@@ -60,9 +60,9 @@
       "\n",
       "The infinite-dimensional Newton's method reads\n",
       "\n",
-      "*Given current *$u_k$, *find* $\\tilde{u} \\in H^1_0$ *such that*\n",
+      "*Given the current solution *$u_k$, *find* $\\tilde{u} \\in H^1_0$ *such that*\n",
       "$$ \\delta_u^2 \\Pi(u_k, \\hat{u}, \\tilde{u}) = -\\delta_u \\Pi(u_k, \\hat{u}) \\quad \\forall \\, \\hat{u} \\in H_0^1.$$\n",
-      "*Update the current solution* $u_{k+1}$ *using the Newton direction* $\\tilde{u}$\n",
+      "*Update the solution using the Newton direction* $\\tilde{u}$\n",
       "$$ u_{k+1} = u_k + \\tilde{u}.$$\n",
       "\n",
       "### Hessian\n",
@@ -89,7 +89,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Load modules\n",
+      "## 1. Load modules\n",
       "\n",
       "To start we load the following modules:\n",
       "\n",
@@ -128,7 +128,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Define the mesh and finite element spaces\n",
+      "## 2. Define the mesh and finite element spaces\n",
       "\n",
       "We construct a triangulation (mesh) $\\mathcal{T}_h$ of the computational domain $\\Omega := [0, 1]^2$ with `nx` elements in the *x*-axis direction and `ny` elements in the *y*-axis direction.\n",
       "\n",
@@ -138,7 +138,7 @@
       "$$ u = \\sum_{i=1}^{{\\rm dim}(V_h)} {\\rm u}_i \\phi_i(x), $$\n",
       "where ${\\rm u}_i$ represents the coefficients in the finite element expansion of $u$.\n",
       "\n",
-      "Finally we define two special types of functions: the `TestFunction` $\\hat{u}$ and the `TrialFunction` $\\tilde{u}$. This special type of functions are used by `FEniCS` to generate the finite element vectors and matrices which stem from the first and second variations of the energy functional $\\Pi$."
+      "Finally we define two special types of functions: the `TestFunction` $\\hat{u}$ and the `TrialFunction` $\\tilde{u}$. These special types of functions are used by `FEniCS` to generate the finite element vectors and matrices which stem from the first and second variations of the energy functional $\\Pi$."
      ]
     },
     {
@@ -173,8 +173,8 @@
       "The parameters $k_1$, $k_2$ and the forcing term $f$ are defined in FEniCS using the keyword [`Constant`](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/functions/constant/Constant.html). To define coefficients that are space dependent one should use the keyword [`Expression`](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/functions/expression/Expression.html).\n",
       "\n",
       "The Dirichlet boundary condition\n",
-      "$$ u = 0 \\quad {\\rm on} \\, \\partial\\Omega$$\n",
-      "is imposed using the the [`DirichletBC`](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/bcs/DirichletBC.html) class.\n",
+      "$$ u = 0 \\quad {\\rm on} \\; \\partial\\Omega$$\n",
+      "is imposed using the [`DirichletBC`](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/bcs/DirichletBC.html) class.\n",
       "\n",
       "To construct this object we need to provide\n",
       "\n",
@@ -216,7 +216,7 @@
       "\n",
       "$$\\delta_u \\Pi(u, \\hat{u}) = \\int_\\Omega \\left[k_2 u \\hat{u} \\nabla u \\cdot \\nabla u + (k_1 + k_2u^2)\\nabla \\hat{u}\\cdot \\nabla u\\right] dx - \\int_\\Omega f \\hat{u} dx \\quad \\forall \\hat{u} \\in H_0^1.$$\n",
       "\n",
-      "We then use a finite difference approach to verify that our derivation is correct.\n",
+      "We use a **finite difference check** to verify that our derivation is correct.\n",
       "More specifically, we consider a function\n",
       "$$ u_0 = x(x-1)y(y-1) \\in H^1_0(\\Omega) $$\n",
       "and we verify that for a random direction $\\hat{u} \\in H^1_0(\\Omega)$ we have\n",
@@ -224,7 +224,7 @@
       "\n",
       "In the figure below we show in a loglog scale the value of $r$ as a function of $\\varepsilon$. We observe that $r$ decays linearly for a wide range of values of $\\varepsilon$, however we notice an increase in the error for extremely small values of $\\varepsilon$ due to numerical stability and finite precision arithmetic.\n",
       "\n",
-      "**NOTE:** To compute the first variation we can also use the [automatic differentian](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/formmanipulations/derivative.html) of variational forms capabilities of FEniCS and write\n",
+      "**NOTE:** To compute the first variation we can also use the [automatic differentiation](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/formmanipulations/derivative.html) of variational forms capabilities of FEniCS and write\n",
       "\n",
       "`grad = derivative(Pi, u, u_hat)`"
      ]
@@ -253,14 +253,14 @@
       "\n",
       "for i in range(n_eps):\n",
       "    uh.assign(u0)\n",
-      "    uh.vector().axpy(eps[i], dir.vector())\n",
+      "    uh.vector().axpy(eps[i], dir.vector()) #uh = uh + eps[i]*dir\n",
       "    piplus = assemble(Pi)\n",
       "    err_grad[i] = abs( (piplus - pi0)/eps[i] - dir_grad0 )\n",
       "\n",
       "plt.figure()    \n",
       "plt.loglog(eps, err_grad, \"-ob\")\n",
       "plt.loglog(eps, (.5*err_grad[0]/eps[0])*eps, \"-.k\")\n",
-      "plt.title(\"Finite Difference Check of the first variation (gradient)\")\n",
+      "plt.title(\"Finite difference check of the first variation (gradient)\")\n",
       "plt.xlabel(\"eps\")\n",
       "plt.ylabel(\"Error grad\")\n",
       "plt.legend([\"Error Grad\", \"First Order\"], \"upper left\")\n"
@@ -285,7 +285,7 @@
       "\n",
       "In the figure below we show in a loglog scale the value of $r$ as a function of $\\varepsilon$. As before, we observe that $r$ decays linearly for a wide range of values of $\\varepsilon$, however we notice an increase in the error for extremely small values of $\\varepsilon$ due to numerical stability and finite precision arithmetic.\n",
       "\n",
-      "**NOTE:** To compute the second variation we can also use automatic differentian and write\n",
+      "**NOTE:** To compute the second variation we can also use automatic differentiation and write\n",
       "\n",
       "`H = derivative(grad, u, u_tilde)`"
      ]
@@ -314,7 +314,7 @@
       "plt.figure()    \n",
       "plt.loglog(eps, err_H, \"-ob\")\n",
       "plt.loglog(eps, (.5*err_H[0]/eps[0])*eps, \"-.k\")\n",
-      "plt.title(\"Finite Difference Check of the second variation (Hessian)\")\n",
+      "plt.title(\"Finite difference check of the second variation (Hessian)\")\n",
       "plt.xlabel(\"eps\")\n",
       "plt.ylabel(\"Error Hessian\")\n",
       "plt.legend([\"Error Hessian\", \"First Order\"], \"upper left\")"
@@ -343,7 +343,7 @@
       "\n",
       "In the output below, for each iteration we report the number of CG iterations, the value of the energy functional, the norm of the gradient, and the inner product between the gradient and the Newton direction $\\delta_u \\Pi(u_0, \\tilde{u})$.\n",
       "\n",
-      "In the example, convergence is achieved when the relative norm of gradient $\\frac{\\delta_u \\Pi(u_n, \\hat{u})}{\\delta_u \\Pi(u_0, \\hat{u})} \\leq \\tau$. However robust implementation of the stopping criterion should monitor also the quantity $\\delta_u \\Pi(u_0, \\tilde{u})$."
+      "In the example, the stopping criterion is relative norm of the gradient $\\frac{\\delta_u \\Pi(u_n, \\hat{u})}{\\delta_u \\Pi(u_0, \\hat{u})} \\leq \\tau$. However robust implementation of the stopping criterion should monitor also the quantity $\\delta_u \\Pi(u_0, \\tilde{u})$."
      ]
     },
     {
@@ -370,7 +370,7 @@
       "    if gn.norm(\"l2\") < tol:\n",
       "        print \"\\nConverged in \", i, \"Newton iterations and \", lin_it, \"linear iterations.\"\n",
       "        break\n",
-      "    myit = solve(Hn, du.vector(), gn, \"cg\", \"ml_amg\")\n",
+      "    myit = solve(Hn, du.vector(), gn, \"cg\", \"petsc_amg\")\n",
       "    lin_it = lin_it + myit\n",
       "    uh.vector().axpy(-1., du.vector())\n",
       "    pi = assemble(Pi)\n",
@@ -393,7 +393,7 @@
       "As an alternative, we can resort to the [built-in non-linear solver](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/solving/solve.html) in FEniCS.\n",
       "\n",
       "To this aim, we use the necessary optimality condition and we cast the minimization problem in a non-linear variational problem.\n",
-      "More specifically, we the set first variation $\\delta_u \\Pi(u,\\hat{u})$ of the energy functional to zero.\n",
+      "More specifically, we set first variation $\\delta_u \\Pi(u,\\hat{u})$ of the energy functional to zero.\n",
       "\n",
       "The input to the `solve` functions are\n",
       "\n",
@@ -401,9 +401,9 @@
       "\n",
       "- the initial guess (INPUT)/solution (OUTPUT) of the non-linear problem;\n",
       "\n",
-      "- Dirichlet boundary conditions;\n",
+      "- the Dirichlet boundary conditions;\n",
       "\n",
-      "- the Jacobian of the residual equation (i.e. the second variation $\\delta_u^2 \\Pi(u,\\hat{u}, \\tilde{u})$ of the energy functional (**Jacobian**). If the Jacobian form is not provided, FEniCS will compute it by automatic differentiation of the residual weak form;\n",
+      "- the Jacobian of the residual equation (i.e. the second variation $\\delta_u^2 \\Pi(u,\\hat{u}, \\tilde{u})$ of the energy functional). If the Jacobian form is not provided, FEniCS will compute it by automatic differentiation of the residual weak form;\n",
       "\n",
       "- additional parameters for the linear and non-linear solver."
      ]
@@ -414,7 +414,7 @@
      "input": [
       "uh.assign(interpolate(Constant(0.), Vh))\n",
       "parameters={\"symmetric\": True, \"newton_solver\": {\"relative_tolerance\": 1e-9, \"report\": True, \\\n",
-      "                                                 \"linear_solver\": \"cg\", \"preconditioner\": \"ml_amg\"}}\n",
+      "                                                 \"linear_solver\": \"cg\", \"preconditioner\": \"petsc_amg\"}}\n",
       "solve(grad == 0, uh, bc, J=H, solver_parameters=parameters)\n",
       "print \"Norm of the gradient at converge\", assemble(grad, bcs=bc).norm(\"l2\")\n",
       "print \"Value of the energy functional at convergence\", assemble(Pi)\n",
