--- a/notebooks/Assignment_3/Ex3.ipynb
+++ b/notebooks/Assignment_3/Ex3.ipynb
@@ -8,6 +8,73 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Image Denoising: Tikhonov and Total Variation Regularization\n",
+      "\n",
+      "The problem of removing noise from an image without blurring\n",
+      "sharp edges can be formulated as an infinite-dimensional minimization\n",
+      "problem. Given a possibly noisy image $u_0(x,y)$ defined within a\n",
+      "square domain $\\Omega$, we would like to\n",
+      "find the image $u(x,y)$ that is closest in the $L_2$ sense, i.e.\\ we\n",
+      "want to minimize \n",
+      "\n",
+      "$$ \\mathcal{F}_{LS} := \\frac{1}{2}\\int_\\Omega (u - u_0)^2 \\; d\\boldsymbol{x}, $$\n",
+      "\n",
+      "\n",
+      "while also removing noise, which is assumed to comprise very ``rough''\n",
+      "components of the image. This latter goal can be incorporated as an\n",
+      "additional term in the objective, in the form of a penalty, i.e., \n",
+      "\n",
+      "$$ \\mathcal{R}_{TN} := \\! \\frac{\\alpha}{2}\\int_\\Omega \\nabla u\n",
+      "\\cdot \\! \\nabla u \\; d\\boldsymbol{x}, $$\n",
+      "where $\\alpha$ acts as a ``diffusion'' coefficient that controls\n",
+      "how strongly we impose the penalty, i.e.\\ how much smoothing\n",
+      "occurs. Unfortunately, if there are sharp edges in the image, this\n",
+      "so-called {\\em Tikhonov (TN) regularization} will blur them. Instead,\n",
+      "in these cases we prefer the so-called {\\em total variation (TV)\n",
+      "regularization},\n",
+      "\n",
+      "$$ \\mathcal{R}_{TV} := \\! \\alpha\\int_\\Omega (\\nabla u \\cdot \\! \\nabla\n",
+      "u)^{\\frac{1}{2}} \\; d\\boldsymbol{x} $$\n",
+      "\n",
+      "where (we will see that) taking the square root is the key to\n",
+      "preserving edges. Since \n",
+      "$\\mathcal{R}_{TV}$ is not differentiable when $\\nabla u =\n",
+      "\\boldsymbol{0}$, it is usually modified to include a positive parameter\n",
+      "$\\varepsilon$ as follows:\n",
+      "\n",
+      "$$ \\mathcal{R}^{\\varepsilon}_{TV} := \\!  \\alpha \\int_\\Omega (\\nabla u \\cdot\n",
+      "\\! \\nabla u + \\varepsilon)^{\\frac{1}{2}} \\; d\\boldsymbol{x}. $$\n",
+      "We wish to study the performance of the two denoising functionals\n",
+      "$\\mathcal{F}_{TN}$ and $\\mathcal{F}^{\\varepsilon}_{TV}$, where\n",
+      "\n",
+      "$$ \\mathcal{F}_{TN}  := \\mathcal{F}_{LS} + \\mathcal{R}_{TN} $$\n",
+      "and\n",
+      "\n",
+      "$$ \\mathcal{F}^{\\varepsilon}_{TV}  := \\mathcal{F}_{LS} + \\mathcal{R}^{\\varepsilon}_{TV}. $$\n",
+      "\n",
+      "We will prescribe the homogeneous Neumann condition \n",
+      "$\\nabla u \\cdot \\boldsymbol{n}=0$ on the four sides of the square,\n",
+      "which amounts to assuming that the image intensity does not change\n",
+      "normal to the boundary of the image. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 1. Setup\n",
+      "\n",
+      "- We generate a rectangular mesh of size `Lx` by `Ly`.\n",
+      "\n",
+      "- We define a linear finite element space.\n",
+      "\n",
+      "- We generate two finite element functions `u_true` and `u_0` that represent the true image and the noisy image respectively."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -60,6 +127,23 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 2. The misfit functional and the true error functional\n",
+      "\n",
+      "Here we describe the variational forms for the $L_2$ misfit functional\n",
+      "$$ \\mathcal{F}_{LS} := \\frac{1}{2}\\int_\\Omega (u - u_0)^2 \\; d\\boldsymbol{x}, $$\n",
+      "and its first and second variations.\n",
+      "\n",
+      "Since we also know the true image `u_true` (*this will not be the case for real applications*)\n",
+      "we can also write the true $L_2$ error functional \n",
+      "$$ \\mathcal{F}_{\\rm true} := \\frac{1}{2}\\int_\\Omega (u - u_{\\rm true})^2 \\; d\\boldsymbol{x}. $$\n",
+      "\n",
+      "Finally, we define some values of $\\alpha$ ($\\alpha = 1, 10^{-1}, 10^{-2}, 10^{-3}, 10^{-4}$) for the choice of the regularization paramenter."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -67,13 +151,13 @@
       "u_hat = TestFunction(V)\n",
       "u_tilde = TrialFunction(V)\n",
       "\n",
-      "trueError = inner(u - u_true, u - u_true)*dx\n",
-      "\n",
       "F_ls = Constant(.5)*inner(u - u_0, u - u_0)*dx\n",
       "grad_ls = inner(u - u_0, u_hat)*dx\n",
       "H_ls = inner(u_tilde, u_hat)*dx\n",
       "\n",
-      "n_alphas = 7\n",
+      "trueError = inner(u - u_true, u - u_true)*dx\n",
+      "\n",
+      "n_alphas = 5\n",
       "alphas = np.power(10., -np.arange(n_alphas))"
      ],
      "language": "python",
@@ -81,16 +165,32 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 3. Tikhonov regularization\n",
+      "\n",
+      "The function `TNsolution` computes the solution of the denoising inverse problem using Tikhonov regularization for a given amount a regularization $\\alpha$.\n",
+      "\n",
+      "More specifically it minimizes the functional\n",
+      "$$ \\mathcal{F}_{TN}(u) = \\frac{1}{2}\\int_\\Omega (u - u_0)^2 \\; d\\boldsymbol{x} + \\frac{\\alpha}{2}\\int_\\Omega \\nabla u \\cdot \\nabla u d\\boldsymbol{x}. $$\n",
+      "\n",
+      "The first variation of $\\mathcal{F}_{TN}$ reads\n",
+      "$$ \\delta_u \\mathcal{F}_{TN}(u, \\hat{u}) = \\int_\\Omega (u - u_0) \\hat{u} \\; d\\boldsymbol{x} + \\alpha \\int_\\Omega \\nabla u \\cdot \\nabla \\hat{u}  d\\boldsymbol{x}, $$\n",
+      "and the second variation is\n",
+      "$$ \\delta_u^2 \\mathcal{F}_{TN}(u, \\hat{u}, \\tilde{u}) = \\int_\\Omega \\tilde{u}\\, \\hat{u} \\; d\\boldsymbol{x} + \\alpha \\int_\\Omega \\nabla \\tilde{u} \\cdot \\nabla \\hat{u}\\, d\\boldsymbol{x}. $$\n",
+      "\n",
+      "The best reconstruction of the original image is obtained for $\\alpha = 10^{-3}$, however we notice that the sharp edges of the image are lost in the reconstruction."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "R_tn = Constant(.5)*inner(nabla_grad(u), nabla_grad(u))*dx\n",
-      "grad_tn = inner(nabla_grad(u), nabla_grad(u_hat))*dx\n",
-      "H_tn = inner(nabla_grad(u_tilde), nabla_grad(u_hat))*dx\n",
-      "\n",
-      "print \"{0:15} {1:15} {2:15} {3:15} {4:15}\".format(\"alpha\", \"F\", \"F_ls\", \"alpha*R_tn\", \"True Error\")\n",
-      "for i in range(n_alphas):\n",
-      "    alpha = Constant(alphas[i])\n",
+      "def TNsolution(alpha):\n",
+      "    R_tn = Constant(.5)*inner(nabla_grad(u), nabla_grad(u))*dx\n",
+      "    grad_tn = inner(nabla_grad(u), nabla_grad(u_hat))*dx\n",
+      "    H_tn = inner(nabla_grad(u_tilde), nabla_grad(u_hat))*dx\n",
       "    F = F_ls + alpha*R_tn\n",
       "    grad = grad_ls + alpha*grad_tn\n",
       "    H = H_ls + alpha*H_tn\n",
@@ -100,11 +200,39 @@
       "    plt.figure()\n",
       "    nb.plot(u)\n",
       "    plt.show()\n",
-      "\n"
+      "\n",
+      "print \"{0:15} {1:15} {2:15} {3:15} {4:15}\".format(\"alpha\", \"F\", \"F_ls\", \"alpha*R_tn\", \"True Error\")\n",
+      "for i in range(n_alphas):\n",
+      "    TNsolution(Constant(alphas[i]))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 4. Total Variation regularization\n",
+      "\n",
+      "The function `TVsolution` computes the solution of the denoising inverse problem using Total Variation regularization for a given amount a regularization $\\alpha$ and perturbation $\\varepsilon$.\n",
+      "\n",
+      "More specifically it minimizes the functional\n",
+      "$$ \\mathcal{F}_{TV}(u) = \\frac{1}{2}\\int_\\Omega (u - u_0)^2 \\; d\\boldsymbol{x} + \\frac{\\alpha}{2}\\int_\\Omega \\left( \\nabla u \\cdot \\nabla u + \\varepsilon \\right)^{\\frac{1}{2}} d\\boldsymbol{x}. $$\n",
+      "\n",
+      "The first variation of $\\mathcal{F}_{TV}$ reads\n",
+      "$$ \\delta_u \\mathcal{F}_{TV}(u, \\hat{u}) = \\int_\\Omega (u - u_0)\\hat{u}  \\; d\\boldsymbol{x} + \\alpha \\int_\\Omega \\frac{1}{\\left( \\nabla u \\cdot \\nabla u + \\varepsilon \\right)^{\\frac{1}{2}}}\\nabla u \\cdot \\nabla \\hat{u}  d\\boldsymbol{x}, $$\n",
+      "and the second variation is\n",
+      "$$ \\delta_u^2 \\mathcal{F}_{TV}(u, \\hat{u}, \\tilde{u}) = \\int_\\Omega \\tilde{u} \\hat{u} \\; d\\boldsymbol{x} + \\alpha \\int_\\Omega \\frac{1}{\\left( \\nabla u \\cdot \\nabla u + \\varepsilon \\right)^{\\frac{1}{2}}} \\left[ \\left( I - \\frac{\\nabla u \\otimes \\nabla u}{\\nabla u \\cdot \\nabla u + \\varepsilon}\\right) \\nabla \\tilde{u}\\right] \\cdot \\nabla \\hat{u} d\\boldsymbol{x}. $$\n",
+      "\n",
+      "The highly nonlinear term $\\left( I - \\frac{\\nabla u \\otimes \\nabla u}{\\nabla u \\cdot \\nabla u + \\varepsilon}\\right) $ in the second variation poses a substantial challange for the convergence of the Newton's method. In fact, the converge radius of the Newtos's method is extremely small.\n",
+      "For this reason in the following we will replace the second variation with the variational form\n",
+      "$$ H_{\\rm approx} = \\int_\\Omega \\tilde{u}\\,\\hat{u} \\; d\\boldsymbol{x} + \\alpha \\int_\\Omega \\frac{1}{\\left( \\nabla u \\cdot \\nabla u + \\varepsilon \\right)^{\\frac{1}{2}}} \\tilde{u} \\cdot \\nabla \\hat{u} d\\boldsymbol{x}. $$\n",
+      "\n",
+      "The resulting method will exhibit only a first order convergence rate but it will be more robust for small values of $\\varepsilon$.\n",
+      "\n",
+      "The best reconstruction of the original image is obtained for $\\alpha = 10^{-2}$. We also notice that Total Variation does a much better job that Tikhonov regularization in preserving the sharp edges of the original image."
+     ]
     },
     {
      "cell_type": "code",
