Notebooks clean up

--- a/notebooks/UnconstrainedMinimization.ipynb
+++ b/notebooks/UnconstrainedMinimization.ipynb
@@ -18,7 +18,7 @@
       "*Find * $u^* \\in H^1_0(\\Omega)$ *such that*\n",
       "$$ u^* = \\rm{arg}\\min_{u \\in H^1_0(\\Omega)} \\Pi(u). $$\n",
       "\n",
-      "Here the energy functional $Pi(u)$ has the form\n",
+      "Here the energy functional $\\Pi(u)$ has the form\n",
       "$$ \\Pi(u) = \\frac{1}{2} \\int_\\Omega k(u) \\nabla u \\cdot \\nabla u dx - \\int_\\Omega f\\,u dx,$$\n",
       "where\n",
       "$$k(u) = k_1 + k_2 u^2. $$\n",
@@ -165,7 +165,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Define the energy functional\n",
+      "## 3. Define the energy functional\n",
       "\n",
       "We now define the energy functional\n",
       "$$ \\Pi(u) = \\frac{1}{2} \\int_\\Omega (k_1 + k_2u^2) \\nabla u \\cdot \\nabla u dx - \\int_\\Omega f\\,u dx.$$\n",
@@ -210,7 +210,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## First variation\n",
+      "## 4. First variation\n",
       "\n",
       "The weak form of the first variation reads\n",
       "\n",
@@ -273,7 +273,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Second variation\n",
+      "## 5. Second variation\n",
       "\n",
       "The weak form of the second variation reads\n",
       "\n",
@@ -327,7 +327,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## The infinite dimensional Newton Method\n",
+      "## 6. The infinite dimensional Newton Method\n",
       "\n",
       "The infinite dimensional Newton step reads\n",
       "\n",
@@ -388,7 +388,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## The built-in non-linear solver in FEniCS\n",
+      "## 7. The built-in non-linear solver in FEniCS\n",
       "\n",
       "As an alternative, we can resort to the [built-in non-linear solver](http://fenicsproject.org/documentation/dolfin/1.6.0/python/programmers-reference/fem/solving/solve.html) in FEniCS.\n",
       "\n",
