Small change in PoissonDeterministic-SD

--- a/notebooks/PoissonDeterministic-SD.ipynb
+++ b/notebooks/PoissonDeterministic-SD.ipynb
@@ -320,7 +320,7 @@
       "\n",
       "# weak form for setting up the adjoint equations\n",
       "a_adj = inner( a * nabla_grad(p_trial), nabla_grad(p_test) ) * dx\n",
-      "L_adjoint = -inner(u - ud, u_test) * dx\n",
+      "L_adj = -inner(u - ud, p_test) * dx\n",
       "\n",
       "\n",
       "# weak form for setting up matrices\n",
@@ -328,7 +328,7 @@
       "M_equ   = inner(a_trial, a_test) * dx\n",
       "\n",
       "\n",
-      "# assemble matrices M\n",
+      "# assemble matrix M\n",
       "M = assemble(M_equ)"
      ],
      "language": "python",
@@ -410,7 +410,7 @@
       "    CT =  assemble(CT_equ)\n",
       "\n",
       "    # solve the adoint problem\n",
-      "    adj_A, adjoint_RHS = assemble_system(a_adj, L_adjoint, bc_adj)\n",
+      "    adj_A, adjoint_RHS = assemble_system(a_adj, L_adj, bc_adj)\n",
       "    solve(adj_A, p.vector(), adjoint_RHS)\n",
       "\n",
       "    # evaluate the  gradient\n",
