Small changes to PoissonDeterministic

--- a/notebooks/PoissonDeterministic.ipynb
+++ b/notebooks/PoissonDeterministic.ipynb
@@ -376,7 +376,7 @@
       "c = 1e-4\n",
       "maxiter = 100\n",
       "#eps = 1e-4\n",
-      "plot_on = 0\n",
+      "plot_on = True\n",
       "\n",
       "# initialize iter counters\n",
       "iter = 1\n",
@@ -567,7 +567,7 @@
       "    # solve the Newton system H a_delta = - MG\n",
       "    solver.solve(a_delta, -MG)\n",
       "    total_cg_iter += Hess_Apply.cgiter\n",
-      "\n",
+      "    \n",
       "    # linesearch\n",
       "    alpha = 1\n",
       "    descent = 0\n",
@@ -600,7 +600,7 @@
       "        (iter, sp, Hess_Apply.cgiter, sp, cost_new, sp, misfit_new, sp, reg_new, sp, \\\n",
       "         graddir, sp, gradnorm, sp, alpha, sp, tolcg)\n",
       "\n",
-      "    if plot_on == 1:\n",
+      "    if plot_on:\n",
       "        nb.multi1_plot([a,u,p], [\"a\",\"u\",\"p\"], same_colorbar=False)\n",
       "        plt.show()\n",
       "    \n",
